Fixing overflow after locating runtime issue

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -19,7 +19,7 @@ body {
 .app {
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .btn {
